feat: ダウンロード用のボタンを追加

--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,7 @@
 <html>
 <body>
   <button id="btn">Run</button>
+  <button id="dwl">Download</button>
   <script src="popup.js"></script>
 </body>
 </html>
