--- a/popup.html
+++ b/popup.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta http-equiv="content-type" charset="UTF-8">
+</head>
 <body>
-  <button id="btn">Run</button>
-  <button id="dwl">Download</button>
+  <button id="btn">この話を保存</button>
+  <button id="dwl">CSVでダウンロード</button>
   <script src="popup.js"></script>
 </body>
 </html>
